--- a/atomate2/ev_curve.ipynb
+++ b/atomate2/ev_curve.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:48.578969643Z",
-     "start_time": "2023-10-31T10:50:43.651386298Z"
+     "end_time": "2023-10-31T16:44:06.639711009Z",
+     "start_time": "2023-10-31T16:44:02.029650200Z"
     }
    },
    "outputs": [],
@@ -21,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:48.620630788Z",
-     "start_time": "2023-10-31T10:50:48.620005593Z"
+     "end_time": "2023-10-31T16:44:06.647530675Z",
+     "start_time": "2023-10-31T16:44:06.645508007Z"
     }
    },
    "outputs": [],
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:48.621222768Z",
-     "start_time": "2023-10-31T10:50:48.620378394Z"
+     "end_time": "2023-10-31T16:44:06.692176831Z",
+     "start_time": "2023-10-31T16:44:06.651463438Z"
     }
    },
    "outputs": [],
@@ -79,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:48.621537890Z",
-     "start_time": "2023-10-31T10:50:48.621049511Z"
+     "end_time": "2023-10-31T16:44:06.694884313Z",
+     "start_time": "2023-10-31T16:44:06.692543331Z"
     }
    },
    "outputs": [],
@@ -101,15 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:48.621789001Z",
-     "start_time": "2023-10-31T10:50:48.621404549Z"
+     "end_time": "2023-10-31T16:44:06.695215746Z",
+     "start_time": "2023-10-31T16:44:06.692916540Z"
     }
    },
    "outputs": [],
@@ -139,15 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:48.623461186Z",
-     "start_time": "2023-10-31T10:50:48.621697992Z"
+     "end_time": "2023-10-31T16:44:06.695481955Z",
+     "start_time": "2023-10-31T16:44:06.693177083Z"
     }
    },
    "outputs": [],
@@ -178,15 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:48.631477162Z",
-     "start_time": "2023-10-31T10:50:48.627672735Z"
+     "end_time": "2023-10-31T16:44:06.735983869Z",
+     "start_time": "2023-10-31T16:44:06.693409550Z"
     }
    },
    "outputs": [],
@@ -194,9 +194,9 @@
     "@dataclass\n",
     "class EVMaker(Maker):\n",
     "    name=\"ev\"\n",
-    "    def make(structure):\n",
+    "    def make(self, structure):\n",
     "\n",
-    "        job1=new_job=M3GNetRelaxMaker(relax_cell=True, relax_kwargs={\"fmax\": 0.0001}).make(structure=structure)\n",
+    "        job1=M3GNetRelaxMaker(relax_cell=True, relax_kwargs={\"fmax\": 0.0001}).make(structure=structure)\n",
     "        job2=get_energies(job1.output.structure)\n",
     "        job3=get_results_ev_curve(list_volumes=job2.output[\"volumes\"], list_energies=job2.output[\"energies\"])\n",
     "        return Flow([job1,job2,job3], job3.output)"
@@ -211,15 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:48.660658830Z",
-     "start_time": "2023-10-31T10:50:48.635656357Z"
+     "end_time": "2023-10-31T16:44:06.738637994Z",
+     "start_time": "2023-10-31T16:44:06.736329235Z"
     }
    },
    "outputs": [
@@ -239,7 +239,7 @@
     "    coords=[[0, 0, 0], [0.25, 0.25, 0.25]],\n",
     ")\n",
     "print(structure.volume)\n",
-    "flow=EVMaker.make(structure=structure)"
+    "flow=EVMaker().make(structure=structure)"
    ]
   },
   {
@@ -251,15 +251,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:56.248537730Z",
-     "start_time": "2023-10-31T10:50:48.662881071Z"
+     "end_time": "2023-10-31T16:44:14.635918080Z",
+     "start_time": "2023-10-31T16:44:06.736690201Z"
     }
    },
    "outputs": [
@@ -267,30 +267,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-10-31 11:50:48,669 INFO Started executing jobs locally\n",
-      "2023-10-31 11:50:48,673 INFO Starting job - M3GNet relax (64c159c9-2716-48f8-ab28-aff08e6149f7)\n",
-      "2023-10-31 11:50:52,858 INFO Finished job - M3GNet relax (64c159c9-2716-48f8-ab28-aff08e6149f7)\n",
-      "2023-10-31 11:50:52,866 INFO Starting job - get_energies (bbe1c3db-67b4-45fb-9c76-a54dfd96f614)\n",
-      "2023-10-31 11:50:53,039 INFO Finished job - get_energies (bbe1c3db-67b4-45fb-9c76-a54dfd96f614)\n",
-      "2023-10-31 11:50:53,048 INFO Starting job - M3GNet relax (dd5fb08f-7296-4703-9119-6820948c6f04)\n",
-      "2023-10-31 11:50:53,396 INFO Finished job - M3GNet relax (dd5fb08f-7296-4703-9119-6820948c6f04)\n",
-      "2023-10-31 11:50:53,398 INFO Starting job - M3GNet relax (061870a4-8ac1-4dc4-936b-d36c202479e4)\n",
-      "2023-10-31 11:50:53,741 INFO Finished job - M3GNet relax (061870a4-8ac1-4dc4-936b-d36c202479e4)\n",
-      "2023-10-31 11:50:53,745 INFO Starting job - M3GNet relax (90959905-768e-48ae-9ea5-058ccf852080)\n",
-      "2023-10-31 11:50:54,085 INFO Finished job - M3GNet relax (90959905-768e-48ae-9ea5-058ccf852080)\n",
-      "2023-10-31 11:50:54,087 INFO Starting job - M3GNet relax (5195154d-cf3d-4b85-8e8c-9603c00d55eb)\n",
-      "2023-10-31 11:50:54,517 INFO Finished job - M3GNet relax (5195154d-cf3d-4b85-8e8c-9603c00d55eb)\n",
-      "2023-10-31 11:50:54,519 INFO Starting job - M3GNet relax (757cadb5-3c45-449a-8646-02e67f7cb0bc)\n",
-      "2023-10-31 11:50:54,956 INFO Finished job - M3GNet relax (757cadb5-3c45-449a-8646-02e67f7cb0bc)\n",
-      "2023-10-31 11:50:54,960 INFO Starting job - M3GNet relax (df1cac03-d7cf-4b7f-b280-1e96bb4e616b)\n",
-      "2023-10-31 11:50:55,439 INFO Finished job - M3GNet relax (df1cac03-d7cf-4b7f-b280-1e96bb4e616b)\n",
-      "2023-10-31 11:50:55,443 INFO Starting job - M3GNet relax (a0ecb185-93d8-4663-a3d5-8cd8f4da8226)\n",
-      "2023-10-31 11:50:55,881 INFO Finished job - M3GNet relax (a0ecb185-93d8-4663-a3d5-8cd8f4da8226)\n",
-      "2023-10-31 11:50:55,882 INFO Starting job - store_inputs (bbe1c3db-67b4-45fb-9c76-a54dfd96f614, 2)\n",
-      "2023-10-31 11:50:55,886 INFO Finished job - store_inputs (bbe1c3db-67b4-45fb-9c76-a54dfd96f614, 2)\n",
-      "2023-10-31 11:50:55,887 INFO Starting job - get_results_ev_curve (633eef4e-8cc7-4e05-8292-38895a0e53db)\n",
-      "2023-10-31 11:50:56,071 INFO Finished job - get_results_ev_curve (633eef4e-8cc7-4e05-8292-38895a0e53db)\n",
-      "2023-10-31 11:50:56,075 INFO Finished executing jobs locally\n"
+      "2023-10-31 17:44:06,735 INFO Started executing jobs locally\n",
+      "2023-10-31 17:44:06,739 INFO Starting job - M3GNet relax (af81b0e7-7f82-4437-b290-638de98124c8)\n",
+      "2023-10-31 17:44:10,831 INFO Finished job - M3GNet relax (af81b0e7-7f82-4437-b290-638de98124c8)\n",
+      "2023-10-31 17:44:10,837 INFO Starting job - get_energies (aa500484-b2f7-4d30-8823-be55abe104f0)\n",
+      "2023-10-31 17:44:11,039 INFO Finished job - get_energies (aa500484-b2f7-4d30-8823-be55abe104f0)\n",
+      "2023-10-31 17:44:11,048 INFO Starting job - M3GNet relax (1e4dbfd0-a9c5-4563-a519-4f30bff6fd38)\n",
+      "2023-10-31 17:44:11,395 INFO Finished job - M3GNet relax (1e4dbfd0-a9c5-4563-a519-4f30bff6fd38)\n",
+      "2023-10-31 17:44:11,397 INFO Starting job - M3GNet relax (cac4d8aa-1bd6-4604-8a08-cab4d96d2e7d)\n",
+      "2023-10-31 17:44:11,734 INFO Finished job - M3GNet relax (cac4d8aa-1bd6-4604-8a08-cab4d96d2e7d)\n",
+      "2023-10-31 17:44:11,738 INFO Starting job - M3GNet relax (4744ce86-a252-4b29-9f16-534c105eb05c)\n",
+      "2023-10-31 17:44:12,080 INFO Finished job - M3GNet relax (4744ce86-a252-4b29-9f16-534c105eb05c)\n",
+      "2023-10-31 17:44:12,081 INFO Starting job - M3GNet relax (1d5b588c-c6e8-4d09-9417-67beea9fcec7)\n",
+      "2023-10-31 17:44:12,420 INFO Finished job - M3GNet relax (1d5b588c-c6e8-4d09-9417-67beea9fcec7)\n",
+      "2023-10-31 17:44:12,422 INFO Starting job - M3GNet relax (56132601-b9f6-42de-ba8d-d60689fc152e)\n",
+      "2023-10-31 17:44:12,770 INFO Finished job - M3GNet relax (56132601-b9f6-42de-ba8d-d60689fc152e)\n",
+      "2023-10-31 17:44:12,778 INFO Starting job - M3GNet relax (9fb5d3a3-2fd9-4211-80a8-4fe7a9acfbd1)\n",
+      "2023-10-31 17:44:13,114 INFO Finished job - M3GNet relax (9fb5d3a3-2fd9-4211-80a8-4fe7a9acfbd1)\n",
+      "2023-10-31 17:44:13,116 INFO Starting job - M3GNet relax (33b87584-ec0e-44fe-92b4-a6ff869fe3e5)\n",
+      "2023-10-31 17:44:14,222 INFO Finished job - M3GNet relax (33b87584-ec0e-44fe-92b4-a6ff869fe3e5)\n",
+      "2023-10-31 17:44:14,228 INFO Starting job - store_inputs (aa500484-b2f7-4d30-8823-be55abe104f0, 2)\n",
+      "2023-10-31 17:44:14,232 INFO Finished job - store_inputs (aa500484-b2f7-4d30-8823-be55abe104f0, 2)\n",
+      "2023-10-31 17:44:14,232 INFO Starting job - get_results_ev_curve (0762de80-6ad6-4ab7-84d0-e3d5717646f8)\n",
+      "2023-10-31 17:44:14,433 INFO Finished job - get_results_ev_curve (0762de80-6ad6-4ab7-84d0-e3d5717646f8)\n",
+      "2023-10-31 17:44:14,434 INFO Finished executing jobs locally\n"
      ]
     },
     {
@@ -308,15 +308,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
     "ExecuteTime": {
-     "end_time": "2023-10-31T10:50:56.260291575Z",
-     "start_time": "2023-10-31T10:50:56.252680201Z"
+     "end_time": "2023-10-31T16:44:14.636842650Z",
+     "start_time": "2023-10-31T16:44:14.634697849Z"
     }
    },
    "outputs": [
@@ -334,8 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-31T16:44:14.754434579Z",
+     "start_time": "2023-10-31T16:44:14.636412010Z"
+    }
+   },
    "outputs": [],
    "source": []
   }
