--- a/eos/pyiron/quantumespresso.ipynb
+++ b/eos/pyiron/quantumespresso.ipynb
@@ -366,7 +366,7 @@
     "    structure_strain.set_cell(structure_strain.cell * strain**(1/3), scale_atoms=True)\n",
     "    job_strain = pr.create_job(job_type=QEStatic, job_name=\"job_strain_\" + str(i))\n",
     "    job_strain.input.structure = structure_strain\n",
-    "    job_strain.run(delete_existing_job=True)\n",
+    "    job_strain.run()\n",
     "    energy_lst.append(job_strain.output.energy)\n",
     "    volume_lst.append(job_strain.output.volume)"
    ]
