🐛 Small fixes to setup notebook and instructions

--- a/eos/aiida/qe-setup.ipynb
+++ b/eos/aiida/qe-setup.ipynb
@@ -50,7 +50,8 @@
     "        transport_type='core.local',\n",
     "        scheduler_type='core.direct',\n",
     "        workdir=Path('workdir').absolute().as_posix()\n",
-    "    ).store().configure()\n",
+    "    ).store()\n",
+    "    localhost.configure()\n",
     "\n",
     "try:\n",
     "    pw_code = orm.load_code('pw@localhost')\n",
@@ -179,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
