--- a/jobflow.ipynb
+++ b/jobflow.ipynb
@@ -551,7 +551,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Finally, it's time to orchestrate all functions and classes together in an actual flow. Note how the number of jobs in `get_ev_curve` can be flexibly controlled by using `strain_lst` and therefore we use `Response` to handle the job output. By making `get_ev_curve` and `plot_energy_volume_curve_job` into `job` object using the `@job` decorator, we ensure that first all the (E, V) data points are calculated and only upon finishing this job are plotted. The `qe_flow` contains the list of the jobs that need to be executed in this workflow. The jobs are connected by the respective `job.output` objects that also ensures the correct order in executing the jobs."
+    "Finally, it's time to orchestrate all functions and classes together in an actual flow. Note how the number of jobs in `get_ev_curve` can be flexibly controlled by using `strain_lst` and therefore we use `Response` to handle the job output. By making `get_ev_curve` and `plot_energy_volume_curve_job` into `job` objects using the `@job` decorator, we ensure that first all the (E, V) data points are calculated before they are plotted. The `qe_flow` contains the list of the jobs that need to be executed in this workflow. The jobs are connected by the respective `job.output` objects that also ensures the correct order in executing the jobs."
    ],
    "metadata": {
     "collapsed": false
@@ -687,7 +687,7 @@
     "## Submission to an HPC / Check pointing / Error handling\n",
     "* `jobflow`: has the command `run_locally` to run jobs in serial with a simple job script\n",
     "* `fireworks` and `jobflow-remote` exist to simplify and parallelize the submission of jobs, and they allow for checkpointing\n",
-    "* error handling can be implemented but is not directly handled by `jobflow`, e.g. currently in atomate2, it is handled by `custodian`"
+    "* error handling can be implemented but is not directly handled by `jobflow`, e.g. currently in `atomate2`, it is handled by `custodian`"
    ]
   },
   {
