--- a/jobflow.ipynb
+++ b/jobflow.ipynb
@@ -298,7 +298,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "As we want to caculate a (E, V) curve with QE, we start by implementing a function to apply a certain strain to the original structure."
+    "As we want to calculate a (E, V) curve with QE, we start by implementing a function to apply a certain strain to the original structure."
    ],
    "metadata": {
     "collapsed": false
