correct qe_flow object

--- a/jobflow.ipynb
+++ b/jobflow.ipynb
@@ -742,7 +742,7 @@
    "execution_count": 15,
    "outputs": [],
    "source": [
-    "graph = to_mermaid(qe_flow, show_flow_boxes=True)\n",
+    "graph = to_mermaid(Flow(qe_flow), show_flow_boxes=True)\n",
     "mm(graph)"
    ],
    "metadata": {
