--- a/pyiron_base.ipynb
+++ b/pyiron_base.ipynb
@@ -20,7 +20,7 @@
     "from ase.build import bulk\n",
     "from ase.io import write\n",
     "from adis_tools.parsers import parse_pw\n",
-    "from pyiron_base import pyiron_job, Project"
+    "from pyiron_base import job, Project"
    ]
   },
   {
@@ -75,7 +75,7 @@
    },
    "outputs": [],
    "source": [
-    "@pyiron_job(output_key_lst=[\"energy\", \"volume\", \"structure\"])\n",
+    "@job(output_key_lst=[\"energy\", \"volume\", \"structure\"])\n",
     "def calculate_qe(working_directory, input_dict):\n",
     "    write_input(\n",
     "        input_dict=input_dict,\n",
@@ -102,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "@pyiron_job(list_length=5)\n",
+    "@job\n",
     "def generate_structures(structure, strain_lst):\n",
     "    structure_lst = []\n",
     "    for strain in strain_lst:\n",
@@ -122,7 +122,7 @@
    },
    "outputs": [],
    "source": [
-    "@pyiron_job\n",
+    "@job\n",
     "def plot_energy_volume_curve(volume_lst, energy_lst):\n",
     "    plt.plot(volume_lst, energy_lst)\n",
     "    plt.xlabel(\"Volume\")\n",
@@ -230,6 +230,7 @@
     "    structure=calc_mini.output.structure,\n",
     "    strain_lst=np.linspace(0.9, 1.1, number_of_strains),\n",
     "    pyiron_project=pr,\n",
+    "    list_length=number_of_strains,\n",
     ")"
    ]
   },
